# federated-inference

./: .gitignore  README.md  pyproject.toml
config/: model.example.yaml  model.yaml  topology.example.yaml  topology.yaml
proto/: worker.proto
scripts/: install_llama_cpp.sh  install_llama_cpp_android.md
src/federated_inference/: __init__.py
src/federated_inference/_generated/: worker_pb2.py  worker_pb2_grpc.py
src/federated_inference/cli/: coordinator_cli.py  worker_cli.py
src/federated_inference/client/: __init__.py  client.py
src/federated_inference/coordinator/: __init__.py  api.py  config.py  coordinator.py  discovery.py  health.py  llama_manager.py  proxy.py  registry.py  status.py
src/federated_inference/worker/: __init__.py  config.py  device_info.py  discovery.py  rpc_manager.py  servicer.py  worker.py
tests/: conftest.py
tests/integration/: test_coordinator_api.py  test_worker_grpc.py
tests/unit/: test_config.py  test_coordinator_cli.py  test_device_info.py  test_llama_manager.py  test_registry.py
